--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ a{color: #42A8B2; }
     left:5px;
 }
 
+.next-prev{
+    position:fixed;
+    top:60px;
+    left:5px;
+}
+
 ul li{
     display: inline;
     margin-right: 5px;
